cosmos/base/kepler-orbit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kepler-orbit
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: kepler-orbit
