cosmos/base/kepler-orbit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kepler-orbit
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: "argocd-redirect-https@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: orbit.altair.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kepler-orbit
                port:
                  number: 80
